fix overflow dc

--- a/webapp/css/styles.css
+++ b/webapp/css/styles.css
@@ -176,7 +176,7 @@ div.btn, #menu{
 }
 
 div.on{
-  	background-color: rgb(251, 251, 251) !important;
+    background-color: rgb(251, 251, 251) !important;
     border-color: #0084b6;
     /* border-bottom: 2px solid; */
     /* border-left: 1px solid #f1f1f1; */
@@ -659,6 +659,7 @@ div.creVent{
   background-color: rgba(255, 255, 255, 0.9);
   z-index: 6000;
   text-align: center;
+  overflow: auto;
 }
 
 
@@ -708,6 +709,20 @@ div.creVent div.txts{
     position: relative;
     /*display: none;*/
 }
+div.creVent div.txts.telegram_open {
+  max-width: 90%;
+  height: auto;
+}
+
+div.txts.telegram_open div.telegramas_wrapper {
+  width: 10%;
+  max-width: 50px;
+  height: auto;
+  float: left;
+  padding-right: 10px; 
+  border-right: solid #ccc 1px;
+}
+
 
 div.creVent div.txts.zoom{
   background-color: #fff;
@@ -737,6 +752,8 @@ div.creVent div.metodo{
     margin: 260px auto;
     padding-bottom: 30px;
 }
+
+
 
 div.creVent div.txts div.cerrar{
     color:#fff;
@@ -915,36 +932,55 @@ footer div.datos span{
 }
 
 #escuelaTelegrama {
-	font-size:20px;
-	font-family:"suecaslabmedium";
-	
+    font-size:20px;
+    font-family:"suecaslabmedium";
+    
 }
 
 .telegramas_wrapper{
-		height:200px;
-		margin-top:35px;
-		
+        height:200px;
+        margin-top:35px;
+        
 }
 
 #telegramas_list {
-	font-family:Arial, Helvetica, sans-serif;
-	text-indent:none;
-	list-style:none;
-	
-	}
-	
+    font-family:Arial, Helvetica, sans-serif;
+    text-indent:none;
+    list-style:none;
+    
+    }
+    
 #telegramas_list li {
-	display:inline-block;
-	padding:5px 10px;
-	border:solid white 1px;
+    display:inline-block;
+    padding:5px 10px;
+    border:solid white 1px;
       margin-bottom: 10px;
-	}
-	
-#telegramas_list li:hover{
-	background:#f1f1f1;
+    }
+    
+#telegramas_list li .dc_telegram { cursor: pointer; }
+#telegramas_list li:hover, #telegramas_list li.active{
+    background:#f1f1f1;
 }
 
 .leaflet-container .leaflet-control-attribution, .leaflet-container .leaflet-control-scale{
   display: none;
+}
+
+div.telegrama_embed{
+    margin: 50px auto;
+    padding-bottom: 20px;
+}
+
+/*TODO Posicionar bien el cierre */
+div.creVent div.telegrama_embed div.cerrar{
+    color:#fff;
+    padding: 7px 10px;
+    border-radius: 100px;
+    background-color: #000;
+    /*position: absolute;*/
+    top:-15px;
+    right:-15px;
+    cursor: pointer;
+    border: 2px solid #fff;
 }
 
